TAG: seqcacheload-tr7106-2
TAG: seqcacheload-tr7106-1
DATE: 09/19/2012
STAFF: sc
CHANGES: 
1) Configuration - US155 update biotype equivalency mapping - split ensembl
   into two config settings (too long for one)
2) seqmarker.py - catenate two ensembl config settings. Update loading
   of Ensembl and VEGA to handle 'all feature types' which implies equiv
   to all its children as well. We have a new mapping for VEGA to 'all
   feature types, but not any for ensembl .... yet. 

TAG: seqcacheload-tr7106-BP
DATE: 09/19/2012
STAFF: sc
CHANGES: CFAM/Build38 Branch Point

TAG: seqcacheload-5-0-0-3
DATE: 08/14/2012
STAFF: sc
CHANGES: TR11098 - new round of biotype conflict mapping 

TAG: seqcacheload-5-0-0-2
TAG: seqcacheload-5-0-0-1
DATE: 05/05/2012
STAFF: sc
CHANGES: TR11098 biotype conflict mapping update

TAG: seqcacheload-4-4-2-2
DATE: 03/19/2012
STAFF: sc
CHANGES: TR11002/TR11003
1) Configuration.default - Added to the biotype conflict mapping for Ensembl and VEGA
2) seqmarker.py - for VEGA remove prefix from raw biotype when looking up 
   mapping; for VEGA catenate value of two biotype mapping variables because
   value too  long for one.

TAG: seqcacheload-4-4-2-1
DATE: 11/22/2011
STAFF: lec
CHANGES:
1) added -f to Configuration.default

TAG: seqcacheload-4-4-1-3
DATE: 09/08/2011
STAFF: sc
CHANGES: TR10308/biotype conflict revision
1)  Configuration.defaults - added NCBI_EQUIV, ENSEMBL_EQUIV, VEGA_EQUIV,
    NC_RNA_TERM, ALL_FEATURES_TERM
2) seqmarker.py - updated generateBiotypeLookups() -  updated the biotype
   conflict algorithm

TAG: seqcacheload-4-4-1-2
DATE: 04/04/2011
STAFF: lec
CHANGES: 
1) TR10658/seqmarker.py/add _Cache_key

TAG: seqcacheload-4-4-1-1
DATE: 03/11/2011
STAFF: lec
CHANGES: 
1) seqdummy.csh; removed call to trigger/SEQ_Source_Assoc_create.object

TAG: seqcacheload-4-4-0-2
DATE: 03/10/2011
STAFF: lec
CHANGES: 
1) seqdummy.py; SEQ_Source_Assoc trigger removed

TAG: seqcacheload-4-4-0-1
DATE: 11/15/2010
STAFF: sc